testCases/semanticAnalyzerTestCases/error/multipleMains.cs16
/*
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/


int main(void){
return 2;
}

int main(void){
return 1;
 }